Fix nav bar alignment

--- a/css/index.css
+++ b/css/index.css
@@ -173,11 +173,16 @@ nav a {
 }
 
 
+/* Search Bar */
 
 input[id="pattern"] {
   height: 45px !important;
   margin-top: 10px;
   border-radius: 5px;
+}
+
+i[id="search-close"] {
+  margin-top: -9px;
 }
 
 .search-input {
